# LuomiNest

./: .coderabbit.yaml  .env.example  .flake8  .gitignore  LICENSE  Makefile  build-all.bat  build-all.ps1  build-all.sh  main.py  pyproject.toml  requirements.txt  run.py  新建 文本文档.md  更新.txt
.github/workflows/: build.yml  release.yml
backend/: LICENSE  README.md  backend.spec  build.bat  build.sh  luominest-backend.spec  luominest.db  main.py  pyproject.toml
config/: __init__.py  settings.py
core/: ai_personality.py  constants.py  exceptions.py  fast_searcher.py  predictive_cache.py  response_mode.py  safety_filter.py  smart_memory_manager.py
core/conversation/: command_handler.py  conversation_manager.py  response_generator.py
core/knowledge/: knowledge_manager.py  local_rag.py  vector_rag.py
core/memory/: fact_extractor.py  memory.py  memory_manager.py  memory_store.py
core/nlp/: __init__.py  context_manager.py  context_resolver.py  embedding_service.py  enhanced_intent_analyzer.py  intent_function_mapper.py  intent_recognizer.py  intent_recognizer_enhanced.py  keyword_extractor.py  name_extractor.py  semantic_similarity.py  unified_intent_analyzer.py  unified_intent_service.py
core/services/: stream_chat_service.py
data/: knowledge_base.json  luminest.db  memory.json  memory_recycle_bin.json
firmware/: .gitignore  README.md
firmware/esp32-c6-coordinator/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/esp32-c6-coordinator/main/: CMakeLists.txt  Kconfig.projbuild  main.c
firmware/esp32-p4/: partitions.csv  sdkconfig.defaults
firmware/esp32-p4/main/: CMakeLists.txt  Kconfig.projbuild  app_mqtt.c  avatar_engine.c  avatar_engine.h  chat_ui.c  chat_ui.h  eth_mgr.c  eth_mgr.h  idf_component.yml  main.c  mipi_lcd.c  mipi_lcd.h  pin_config.h  settings_ui.c  settings_ui.h  spi_frame_rx.c  spi_frame_rx.h  time_mgr.c  time_mgr.h  touch_driver.c  touch_driver.h  web_config.c  web_config.h  wifi_mgr.c  wifi_mgr.h
frontend/: .env.example  .npmrc  .pnpmfile.cjs  BUILD.md  LICENSE  README.md  build-installer.ps1  build.bat  build.ps1  build.sh  electron.vite.config.ts  generate-icon.js  installer.iss  package.json  pnpm-lock.yaml  tsconfig.node.json  tsconfig.web.json  tsconfig.web.tsbuildinfo  vitest.config.ts
hardware/: __init__.py  hardware_manager.py
scripts/dev/: start.bat
src/: __init__.py  app.py
tests/: simple_test.py  test_memory_system.py  test_semantic_optimization.py
utils/: config.py  helpers.py
(+258 files in other folders)
